--- a/lawyer.html
+++ b/lawyer.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Lawyer page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endi]-->
+    <![endif]-->
   </head>
 
   <body>
@@ -45,7 +45,6 @@
           </button>
           <a class="navbar-brand" href="#">Project name</a>
         </div>
-
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
             <div class="form-group">
@@ -55,21 +54,15 @@
               <input type="password" placeholder="Password" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
-           <button type="button" class=" navbar-right btn btn-success">     <a href="./lawyer.html">Login</a>
-          </button>
           </form>
-
         </div><!--/.navbar-collapse -->
-        <div id="navbar" class="navbar-collapse collapse">
-
-        </div>
       </div>
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
+        <h1>Lawyer page</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
