--- a/possible_template_1.html
+++ b/possible_template_1.html
@@ -55,7 +55,7 @@
               <input type="password" placeholder="Password" class="form-control">
             </div>
               <button type="submit" class="btn btn-success">Login</button>
-             <button onclick="location.href='./lawyer.html'" href="./lawyer.html" type="button" class=" navbar-right btn btn-success">     Sign up
+             <button onclick="location.href='./signup.html'" href="./lawyer.html" type="button" class=" navbar-right btn btn-success">     Sign up
             </button>
           </form>
 
