Edit location and issue search

--- a/possible_template_1.html
+++ b/possible_template_1.html
@@ -85,23 +85,37 @@
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
+
           <h2>Meet a lawyer</h2>
           <p>Q: Do you need representation? <br>
             Yes: Enter your location<br>
           <button id="location">Location</button>
           <button id="issue">Issue</button>
-          <p id="location_search">show location search bar</p>
-          <p id="issue_search">show issues</p>
-          </p>
+
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2></h2>
-          <p></p>
+          <div id="location_search">
+            <p>
+              <h2>
+                Location search
+              </h2>
+              show location search bar
+            </p>
+          </div>
+          <div id="issue_search">
+            <p>
+              <h2>Issue search</h2>
+              <ul>
+                <li>Traffic violation</li>
+                <li>Accidents</li>
+                <li>Misdemeanor</li>
+                <li>Rights violation</li>
+              </ul>
+            </p>
+          </div>
         </div>
       </div>
-
-      <hr>
 
       <footer>
         <p>&copy; 2016 Company, Inc.</p>
